[SEAC-77] feat: admin statistics
